--- a/less/media.less
+++ b/less/media.less
@@ -277,6 +277,7 @@
 
     .connection-info__item--search-menu {
         justify-content: flex-start;
+        align-items: flex-start;
     }
    
     // .connection-info--tablet-main {
@@ -785,6 +786,13 @@
 
 
 @media screen and (max-width: 720px) {
+
+    .navigation-menu {
+        margin-bottom: 73px;
+    }
+   
+   
+
     .dots-decorate,
     .diamond-decorate {
         display: none;
@@ -1169,6 +1177,17 @@
     .container {
         width: 100%;
         padding: 0 20px;
+    }
+    .search__input--menu {
+        width: 100%;
+        margin-right: 0;
+    }
+    .search {
+        width: 100%;
+        margin-right: 0;
+    }
+    .connection-info__btn--menu {
+        margin: 0 auto;
     }
     .connection-info-tablet{
         width: 100%;
