--- a/css/style.css
+++ b/css/style.css
@@ -86,7 +86,7 @@ a {
   border-left: 20px solid rgba(244, 244, 244, 0.9);
 }
 .hover-items__list {
-  padding: 20px;
+  padding: 20px 20px 20px 30px;
   background: rgba(244, 244, 244, 0.9);
   border-radius: 6px;
   border-top-left-radius: 0;
@@ -95,10 +95,16 @@ a {
   display: block;
 }
 .subitem {
+  position: relative;
   display: flex;
   border-bottom: 2px solid #626365;
   padding-bottom: 11px;
   margin-bottom: 11px;
+}
+.subitem::before {
+  position: absolute;
+  display: none;
+  content: url('../img/icons/menu-item-arr-decor.svg');
 }
 .subitem-link {
   display: flex;
@@ -110,12 +116,13 @@ a {
   font-size: 15px;
   line-height: 18px;
   color: #555A61;
+  margin-left: 11px;
 }
 .subitem-link:hover {
   color: #00369C;
 }
-.subitem-icon {
-  margin-right: 16px;
+.subitem:hover::before {
+  display: block;
 }
 .subitem:last-child {
   border-bottom: 0;
@@ -319,6 +326,9 @@ a {
   border-radius: 21px;
   padding: 7px 17px;
 }
+.search__input--menu {
+  margin-bottom: 26px;
+}
 .search__input::placeholder {
   font-family: Roboto;
   font-size: 14px;
@@ -340,6 +350,9 @@ a {
 .search__btn--menu {
   background: linear-gradient(137.45deg, #f4f4f4 -0.37%, #b8b8b8 104.82%);
   max-width: 195px;
+}
+.connection-info__btn--menu {
+  width: 195px !important;
 }
 .navigation-item {
   display: flex;
@@ -394,6 +407,7 @@ summary {
   display: flex;
   justify-content: space-between;
   align-items: center;
+  flex-wrap: wrap;
 }
 .adaptive-menu__info {
   font-size: 16px;
@@ -418,6 +432,7 @@ summary {
   display: flex;
   justify-content: space-between;
   width: 210px;
+  text-transform: uppercase;
 }
 .adaptive-menu summary {
   width: 210px;
@@ -481,6 +496,9 @@ summary {
 }
 .navigation-menu__wrap {
   margin-top: 15px;
+  display: flex;
+  justify-content: space-between;
+  flex-wrap: wrap;
 }
 .navigation-menu__title {
   display: inline;
