--- a/less/assistant.less
+++ b/less/assistant.less
@@ -125,7 +125,6 @@
 .about-content {
     display: flex;
     justify-content: space-between;
-    align-items: flex-start;
 }
 .about-text {
     text-align: justify;
@@ -135,17 +134,18 @@
     width: 65%;
     z-index: 3;
 }
-
+.forms-wrap {
+    display: flex;
+    flex-direction: column;
+}
 .about-form {
     display: flex;
-    width: 30%;  
+   
     z-index: 999; 
 }
-
-.admission-form {
-    // align-items: flex-start;
+.quick-navigation {
+    margin-bottom: 32px;
 }
-
 .check-universe {
     margin-bottom: 40px;
     &__wrap {
@@ -508,6 +508,5 @@
 
 .commetns-form {
     display: flex;
-    width: 30%;
     z-index: 999;
 }
