--- a/less/assistant.less
+++ b/less/assistant.less
@@ -144,7 +144,9 @@
     z-index: 999; 
 }
 .quick-navigation {
+    position: relative;
     margin-bottom: 32px;
+    z-index: 3;
 }
 .check-universe {
     margin-bottom: 40px;
@@ -212,11 +214,11 @@
 
 .top-active {
     &::before{
-        top: 17%;
+        top: 14%;
     }
 
     &::after{
-        top: 17%;
+        top: 14%;
     }
 }
 
@@ -232,11 +234,11 @@
 
 .bottom-active{
     &::before{
-        top: 83%;
+        top: 85%;
     }
 
     &::after{
-        top: 83%;
+        top: 85%;
     }
 }
 .universe-items  {
