--- a/less/style.less
+++ b/less/style.less
@@ -826,6 +826,15 @@ summary {
         border-radius: 28px;
         // transform: matrix(0.71, -0.69, 0.72, 0.71, 0, 0);
     }
+
+    &__arr {
+        position: absolute;
+        z-index: 99;
+        top: 81.5%;
+        right: 88px;
+        transform: rotate(45deg);
+
+    }
  }
 
 
