--- a/css/media.css
+++ b/css/media.css
@@ -34,6 +34,9 @@
     width: 939.89px;
     height: 760.76px;
   }
+  .rectangle-decorate__arr {
+    top: 78.5%;
+  }
   .header-slider .dots-img {
     width: 64px;
     height: 50px;
@@ -322,7 +325,6 @@
     right: 40%;
     width: 1129.71px;
     height: 929.67px;
-    /* left: -583px; */
     top: 19.83px;
     background: rgba(0, 150, 235, 0.7);
     border-radius: 28px;
@@ -335,6 +337,9 @@
     left: 19px;
     background: linear-gradient(273.52deg, #0066ff -9.04%, #00369c 41.93%);
     opacity: 0.85;
+  }
+  .rectangle-decorate__arr {
+    display: none;
   }
   .header-slider {
     background-position: 64%, 40%;
@@ -722,6 +727,7 @@
     width: 16.66%;
     padding: 9px 13px;
     border-left: 0px;
+    background: linear-gradient(188.21deg, #0066ff -8.5%, #00369c 51.46%, #0031c4 130.73%, #018ff6 130.74%);
     display: flex;
     flex-direction: column;
     align-items: center;
@@ -739,7 +745,7 @@
   }
   .header-slider__nav-item--active {
     font-size: 15px;
-    line-height: 1;
+    line-height: 1.2;
   }
   .square-decorate {
     display: none;
