--- a/less/media.less
+++ b/less/media.less
@@ -47,6 +47,9 @@
             height: 760.76px;
           
         }
+        &__arr {
+            top: 78.5%;
+        }
      }
 
     .header-slider {
@@ -364,11 +367,9 @@
 }
 
 @media screen and (max-width: 997px)  {
-
     .benefits-items {
         justify-content: center;
         margin: 50px -20px 0;
-      
     }
    
     .benefits-item {
@@ -442,19 +443,15 @@
 }
 
 @media screen and (max-width: 997px)  {
-
     .benefits-items {
         justify-content: center;
         margin: 50px -20px 0;
-      
     }
 
     .rectangle-decorate {
-        // left: -14%;
         right: 40%;
         width: 1129.71px;
         height: 929.67px;
-        /* left: -583px; */
         top: 19.83px;
         background: rgba(0, 150, 235, 0.7);
         border-radius: 28px;
@@ -468,6 +465,10 @@
             left: 19px;
             background: linear-gradient(273.52deg, #0066FF -9.04%, #00369C 41.93%);
             opacity: 0.85;
+        }
+
+        &__arr {
+            display: none;
         }
      }
    
@@ -539,7 +540,6 @@
     .banner {
         width: 70px;
         height: 70px;
-        // display: none;
         font-size: 13px;
         &::before{
             width: 57px;
@@ -568,8 +568,6 @@
         margin-left: 0;
     }
 }
-
-
 
 
 @media screen and (max-width: 890px) {
@@ -980,7 +978,7 @@
              width: 16.66%;
              padding: 9px 13px;//
              border-left: 0px;//
-            
+             background: linear-gradient(188.21deg, #0066FF -8.5%, #00369C 51.46%, #0031C4 130.73%, #018FF6 130.74%);
              display: flex;
              flex-direction: column;
              align-items: center;
@@ -1004,7 +1002,7 @@
 
     .header-slider__nav-item--active {
         font-size: 15px; 
-        line-height: 1;
+        line-height: 1.2;
     }
     .square-decorate {
         display: none;
@@ -1062,8 +1060,6 @@
     .universities__slider .slick-track {
         padding: 0;
     }
-
-    
 
     .btn--university-top-universities,
     .btn--university-universities-russia,
