--- a/css/assistans-media.css
+++ b/css/assistans-media.css
@@ -55,4 +55,15 @@
   .header-slider__block {
     margin-top: 85px;
   }
+  .universe-item {
+    max-width: 88px;
+  }
+  .universe-item__title {
+    font-size: 15px;
+  }
+}
+@media screen and (max-width: 997px) {
+  .header-slider {
+    background-position: 52%, 40%;
+  }
 }
