--- a/less/assistans-media.less
+++ b/less/assistans-media.less
@@ -68,4 +68,24 @@
     .header-slider__block {
         margin-top: 85px;
     }
+
+
+    .universe-item {
+       
+        // flex-basis: 100px;
+        max-width: 88px;
+    
+        &__title {        
+            font-size: 15px; 
+          
+        }
+    
+       
+    }
+}
+
+@media screen and (max-width: 997px){
+    .header-slider {
+        background-position: 52%, 40%;
+    }
 }
