fixa adaptive nav menu

--- a/css/media.css
+++ b/css/media.css
@@ -589,6 +589,19 @@
   .navigation-menu {
     margin-bottom: 73px;
   }
+  .navigation-menu__title {
+    font-size: 19px;
+  }
+  .drop-down__header {
+    font-size: 14px;
+  }
+  .adaptive-menu .drop-down__header {
+    margin-right: auto;
+    display: flex;
+    justify-content: space-between;
+    width: 182px;
+    text-transform: uppercase;
+  }
   .dots-decorate,
   .diamond-decorate {
     display: none;
