--- a/less/media.less
+++ b/less/media.less
@@ -789,7 +789,21 @@
         margin-bottom: 73px;
     }
    
+    .navigation-menu__title {
+        font-size: 19px;
+    }
    
+    .drop-down__header {
+        font-size: 14px;
+    }
+
+    .adaptive-menu .drop-down__header {
+        margin-right: auto;
+        display: flex;
+        justify-content: space-between;
+        width: 182px;
+        text-transform: uppercase;
+    }
 
     .dots-decorate,
     .diamond-decorate {
@@ -837,8 +851,6 @@
         }   
   
         .academic-header {
-            
-        
             &__icon {
                 width: 49px;
             }
@@ -848,7 +860,7 @@
             }
         
             &__content {
-                            justify-content: center;
+                justify-content: center;
         
             }
         
