--- a/less/media.less
+++ b/less/media.less
@@ -201,6 +201,38 @@
     .diamond-decorate {
         left: -167px;
     }
+
+    // mac os
+
+    .container {
+        max-width: 1200px;
+    }
+
+    .connection-info {
+        padding-top: 15px;
+    }
+
+    .header-slider{
+    
+        &__info {
+            margin-bottom: 30px;
+        }
+        
+        &__nav-num {
+            padding: 3px 18px;
+        }
+
+        &__buttons {
+            top: 26px;
+        }
+        &__mail-title {
+            margin-top: 10px;
+        }
+    }
+
+    .header-assistent-slider {
+        left: 10%;
+    }
 }
 
 
@@ -282,14 +314,7 @@
         justify-content: flex-start;
         align-items: flex-start;
     }
-   
-    // .connection-info--tablet-main {
-    //     display: none;
-    // }
-    // .connection-info__item--search-menu{
-    //     display: flex;
-    //     justify-content: flex-start;
-    // }
+
     .connection-info__btn--menu {
         margin-left: 0;
     }
@@ -300,8 +325,6 @@
     .academic-header .arrow-decorate{
        display: none;
     }
-
-    
 
     .banner {
         font-size: 18px;
@@ -525,10 +548,8 @@
                     margin-left: 0;
                 }
             }
-    
 
         }
-    
 
     }
     
@@ -646,7 +667,6 @@
 
 @media screen and (max-width: 800px) {
 
-    
     .header--sticky {
         opacity: 1;
     }
@@ -684,7 +704,6 @@
     
 
     .header-slider__nav-num {
-      
         padding: 3px 13px;
     }
   
