--- a/less/media.less
+++ b/less/media.less
@@ -213,6 +213,10 @@
     }
 
     .header-slider{
+
+        &__content {
+            padding-bottom: 20px;
+        }
     
         &__info {
             margin-bottom: 30px;
@@ -239,8 +243,14 @@
 
 @media screen and (max-width: 1200px) {
 
-    .header-slider__mail-title {
-        font-size: 68px;
+        .header-slider{
+        
+        &__content {
+            padding-top: 20px;
+        }
+        &__mail-title {
+            font-size: 68px;
+        }
     }
     .header {
         &__nav {
@@ -266,7 +276,6 @@
 
     .rectangle-decorate-block {
         right: -106px;
-        // top: -269px;
         &__red {
             width: 234.19px;
             height: 234.19px;
@@ -523,7 +532,6 @@
             font-size: 14px;
             color: #FFFFFF;
             letter-spacing: -0.02em;
-            margin-bottom: 50px;
         }
     
         &__nav {
@@ -666,15 +674,10 @@
 }
 
 @media screen and (max-width: 800px) {
-
     .header--sticky {
         opacity: 1;
     }
-
-    .header-slider {
-        padding-bottom: 100px;
-      
-    }
+ 
 
     .header-slider__mail-title {
         font-size: 45px;
@@ -699,10 +702,9 @@
 
     .header-assistent-slider {
         max-width: 590px;
-        left: 56%;
+        left: 66%;
     }
     
-
     .header-slider__nav-num {
         padding: 3px 13px;
     }
