--- a/css/media.css
+++ b/css/media.css
@@ -753,6 +753,8 @@
     max-width: 100vw;
     bottom: -137px;
     left: -20px;
+    top: 48px;
+    margin-top: 176px;
   }
   .header-slider__nav-list {
     display: flex;
