--- a/less/media.less
+++ b/less/media.less
@@ -835,7 +835,6 @@
         justify-content: center;
     }
 
-   
     .step-block {
         max-width: 225px;
         margin: 0px auto 29px;
@@ -1001,6 +1000,8 @@
          max-width: 100vw;
          bottom: -137px;
          left: -20px;
+         top: 48px;
+         margin-top: 176px;
  
         &-list {
          display: flex;//
