add filter task methods

--- a/less/style.less
+++ b/less/style.less
@@ -396,7 +396,7 @@ a{
         border: 1px solid #0031C4;
         background: #FFFFFF;
         border-radius: 21px;
-        padding: 8px 17px;
+        padding: 9px 17px;
 
         &--menu {
             margin-bottom: 26px;
@@ -411,7 +411,7 @@ a{
     }
     &__btn {
         border: none;
-        top: 0px;
+        top: -0.5px;
         right: -9px;
         position: absolute;
         width: 35px;
@@ -1760,6 +1760,7 @@ summary {
     bottom: 83px;
     z-index: 3;
     padding: 10px 0;
+  
     &--prev {
         left: -19px;
     }
@@ -1773,6 +1774,7 @@ summary {
     max-width: 935px;
     margin: 0 auto;
     position: relative;
+    margin-top: 40px;
     .slick-list {
         margin: 0;
     }
