--- a/css/style.css
+++ b/css/style.css
@@ -331,7 +331,7 @@ a {
   border: 1px solid #0031C4;
   background: #FFFFFF;
   border-radius: 21px;
-  padding: 8px 17px;
+  padding: 9px 17px;
 }
 .search__input--menu {
   margin-bottom: 26px;
@@ -343,7 +343,7 @@ a {
 }
 .search__btn {
   border: none;
-  top: 0px;
+  top: -0.5px;
   right: -9px;
   position: absolute;
   width: 35px;
@@ -1477,6 +1477,7 @@ summary {
   max-width: 935px;
   margin: 0 auto;
   position: relative;
+  margin-top: 40px;
 }
 .feedback-slider .slick-list {
   margin: 0;
