--- a/css/style.css
+++ b/css/style.css
@@ -36,7 +36,6 @@ a {
 }
 .header--sticky {
   background: #FFFFFF;
-  opacity: 0.9;
   box-shadow: 0px 2px 6px rgba(0, 0, 0, 0.25);
 }
 .header-wrap {
@@ -87,9 +86,21 @@ a {
 }
 .hover-items__list {
   padding: 20px 20px 20px 30px;
-  background: rgba(244, 244, 244, 0.9);
+  background-color: rgba(244, 244, 244, 0.9);
   border-radius: 6px;
   border-top-left-radius: 0;
+}
+.hover-items--stiky {
+  opacity: 1 !important;
+  box-shadow: 0px 2px 6px rgba(0, 0, 0, 0.25);
+}
+.hover-items--stiky::before {
+  border-bottom: 15px solid #fff;
+  border-left: 20px solid #fff;
+}
+.hover-items--stiky .hover-items__list {
+  background-color: #ffffff;
+  opacity: 1 !important;
 }
 .header__item:hover > .hover-items {
   display: block;
