--- a/less/media.less
+++ b/less/media.less
@@ -1102,7 +1102,6 @@
     }
 
     .btn--university {
-        padding: 10px;
         font-size: 14px;
         margin-right: 0;
     }
@@ -1234,7 +1233,9 @@
         width: 9px;
         height: 9px;
     }
-
+     .btn--university {
+        padding: 10px;
+     }
     .header-wrap {
         display: flex;
         justify-content: space-between;
