--- a/less/style.less
+++ b/less/style.less
@@ -51,7 +51,6 @@ a{
 
     &--sticky {
         background: #FFFFFF;
-        opacity: 0.9;
         box-shadow: 0px 2px 6px rgba(0, 0, 0, 0.25);
     }
 
@@ -106,11 +105,24 @@ a{
          border-bottom: 15px solid rgba(244, 244, 244, 0.9);
          border-left: 20px solid rgba(244, 244, 244, 0.9);
      }
+
     &__list{
         padding: 20px 20px 20px 30px;
-        background: rgba(244, 244, 244, 0.9);
+        background-color: rgba(244, 244, 244, 0.9);
         border-radius: 6px;
         border-top-left-radius: 0;
+    }
+}
+.hover-items--stiky {
+    opacity: 1 !important;
+    box-shadow: 0px 2px 6px rgba(0, 0, 0, 0.25);
+    &::before {       
+        border-bottom: 15px solid #fff;
+        border-left: 20px solid #fff;
+    }
+    .hover-items__list {
+        background-color: rgba(255, 255, 255, 1);
+        opacity: 1 !important;
     }
 }
 
