--- a/less/style.less
+++ b/less/style.less
@@ -465,6 +465,10 @@ a{
         margin-right: 10px;
         background-color: #0066FF;
         border-radius: 50%;
+
+        &--header-slider {
+            background-color: transparent;
+        }
     }
 
     &__link {
