fix slider header mobile

--- a/less/media.less
+++ b/less/media.less
@@ -1252,15 +1252,15 @@
     }
 
     .rectangle-decorate {
-        top: -30%;
-        left: -148px
+        top: -36%;
+        left: -126px;
     }
     .header-slider__mail-title{
         margin-top: 0;
         font-size: 33px;
     }
     .slider-header-btn {
-        top: 50%;
+        top: 63%;
     }
     .header-slider {
         background-position: 71%, 40%;
