--- a/less/style.less
+++ b/less/style.less
@@ -2165,3 +2165,11 @@ background: #0052d5;
         top: 0;    
     }
 }
+
+
+.slick-slide {
+    // transition: 0.5s opacity linear;
+  }
+  .slick-slider-opacity {
+    opacity: 0.5;
+  }
