--- a/less/style.less
+++ b/less/style.less
@@ -192,13 +192,13 @@ a{
         padding: 7.5px 40px;
         background: linear-gradient(185.59deg, #FF0000 9.11%, #CE0000 98.12%);
         border-radius: 18.5px;
+        font-size: 19px;
     }
 
     &--posive {
         background: linear-gradient(165.36deg, #F4F4F4 -0.37%, #B8B8B8 104.82%);
         box-shadow: 0px 2px 2px rgba(0, 0, 0, 0.25);
         border-radius: 18.5px;
-       
         color:  #0031C4;
     }
 
@@ -1718,12 +1718,25 @@ summary {
         }
 
     }
+
+    &-slider {
+        &__btn {
+            display: none;
+            padding: 12px 46px;
+            margin: 36px auto 32px;
+            font-size: 14px;
+            max-width: 175px;
+            text-transform: uppercase;
+
+        }
+    }
 }
 
 .gallery-slider-mobile {
     display: none;
     position: absolute;
-    top: 50%;
+    top: 45%;
+    transform: translate(0, -50%);
     z-index: 3;
     background-color: transparent;
     &--next {
@@ -1843,7 +1856,7 @@ summary {
 
     &__inner {
         margin: 46px 50px;
-        padding: 23px 35px;
+        padding: 23px 35px 23px 0;
         background: #FFFFFF;    
         box-shadow: 0px 2px 6px rgba(0, 0, 0, 0.25);
         border-radius: 14px;
@@ -1852,11 +1865,8 @@ summary {
         font-weight: bold;
         color: #0031C4;
         display: grid;
-        // flex-direction: column;
         grid-template-areas: 'img header'
-        'img title';
-
-                           
+        'img title';       
     }
 
     &__headers {
@@ -1873,24 +1883,17 @@ summary {
         img {
             position: relative;
             bottom: 40px;
+            left: -20px;
             display: block;
-            // width: 100px;
-            // height: 100px;
-            // min-width: 100px;
-            // min-height: 100px;
-            // max-width: 100%;
-            // max-height: 100%;
-            // object-fit: cover;
             border-radius: 28px;
             border-right: 4px solid #0031C4;
             border-bottom: 4px solid #0031C4;
-            margin-right: 35px;
+            margin-right: 15px;
         }
        
     }
     
     &__title {
-        // grid-area: title;
         font-size: 22px;
         margin-bottom: 15px;
     }
@@ -2166,3 +2169,9 @@ background: #0052d5;
     }
 }
 
+.slick-slide[aria-hidden="true"] {
+    opacity: 0.5;
+}
+
+
+// .center .slick-center h3{-moz-transform:scale(1.08);-ms-transform:scale(1.08);-o-transform:scale(1.08);-webkit-transform:scale(1.08);color:#e67e22;opacity:1;transform:scale(1.08);}
