--- a/css/style.css
+++ b/css/style.css
@@ -160,6 +160,7 @@ a {
   padding: 7.5px 40px;
   background: linear-gradient(185.59deg, #ff0000 9.11%, #ce0000 98.12%);
   border-radius: 18.5px;
+  font-size: 19px;
 }
 .btn--posive {
   background: linear-gradient(165.36deg, #f4f4f4 -0.37%, #b8b8b8 104.82%);
@@ -1431,10 +1432,19 @@ summary {
 .gallery .slick-dots button {
   display: none;
 }
+.gallery-slider__btn {
+  display: none;
+  padding: 12px 46px;
+  margin: 36px auto 32px;
+  font-size: 14px;
+  max-width: 175px;
+  text-transform: uppercase;
+}
 .gallery-slider-mobile {
   display: none;
   position: absolute;
-  top: 50%;
+  top: 45%;
+  transform: translate(0, -50%);
   z-index: 3;
   background-color: transparent;
 }
@@ -1536,7 +1546,7 @@ summary {
 }
 .feedback-item__inner {
   margin: 46px 50px;
-  padding: 23px 35px;
+  padding: 23px 35px 23px 0;
   background: #FFFFFF;
   box-shadow: 0px 2px 6px rgba(0, 0, 0, 0.25);
   border-radius: 14px;
@@ -1560,11 +1570,12 @@ summary {
 .feedback-item__img img {
   position: relative;
   bottom: 40px;
+  left: -20px;
   display: block;
   border-radius: 28px;
   border-right: 4px solid #0031C4;
   border-bottom: 4px solid #0031C4;
-  margin-right: 35px;
+  margin-right: 15px;
 }
 .feedback-item__title {
   font-size: 22px;
@@ -1767,4 +1778,7 @@ summary {
   to {
     top: 0;
   }
+}
+.slick-slide[aria-hidden="true"] {
+  opacity: 0.5;
 }
